Fix the calculation for endDate and prevWeek for month calendar. Also change color of month display because days of the month was not really visible.
git-svn-id: https://svn.cccs.umn.edu/svn/ncs/ncs-case-management@1009 59f948a9-288f-427a-98b3-c46ff3be0d89

--- a/web-app/css/calendar.css
+++ b/web-app/css/calendar.css
@@ -16,7 +16,8 @@ div.dayOfMonth  {
 	text-align: right;
 	font-size: 0.7em;
 	vertical-align: top;
-	color: #CCC;
+	/*color: #CCC;*/
+	color:purple;
 }
 
 ul.appointmentList li {
